# gears

./: CLAUDE.md  Cargo.toml  README.md  gears-demo.toml
src/: api.rs  context.rs  engine.rs  error.rs  event.rs  external_worker.rs  lib.rs  main.rs  metrics.rs  traits.rs  typed.rs  worker.rs
src/storage/: sqlite.rs
tests/: integration.rs
