[package]
name = "gears"
version = "0.1.0"
edition = "2024"

[lib]
name = "gears"
path = "src/lib.rs"

[[bin]]
name = "gears-demo"
path = "src/main.rs"

[[bin]]
name = "gears-ctl"
path = "src/bin/gears-ctl/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-rusqlite = "0.5"
axum = "0.7"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tokio-cron-scheduler = "0.13"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
metrics = { version = "0.24", optional = true }

[features]
metrics = ["dep:metrics"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
lto = "fat"